fix: add dark mode class to html tag for safari dark mode compatibility

--- a/client/src/assets/styles/_color-themes.scss
+++ b/client/src/assets/styles/_color-themes.scss
@@ -1,4 +1,7 @@
 // color themes ----------------
+html.dark-mode {
+  background-color: theme-color("dark-mode") !important;
+}
 body.dark-mode {
   transition: all 500ms ease-in-out;
   background-color: theme-color("dark-mode") !important;
