--- a/client/src/assets/styles/_global.scss
+++ b/client/src/assets/styles/_global.scss
@@ -1,6 +1,6 @@
 html {
   scroll-behavior: smooth;
-  background-color: transparent;
+  background-color: theme-color("light");
 }
 html body {
   height: 100%;
